# evraka_mock

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: celery.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
evreka/: asgi.py  settings.py  urls.py  wsgi.py
simulation/: Dockerfile  main.py
