[tool.poetry]
name = "evreka"
version = "0.1.0"
description = ""
authors = ["gokberkoguz <mgokberkoguz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
graphene-django = "^3.2.1"
pika = "^1.3.2"
celery = "^5.4.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
